--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
     cache: false
     prefix: classpath:/templates/
     suffix: .html
+  devtools:
+    restart:
+      enabled: true
+    livereload:
+      enabled: true
 
 server:
   port: 8080
@@ -25,10 +30,13 @@ whatsapp:
     number:
       id: ${WHATSAPP_PHONE_NUMBER_ID:}
   api:
-    url: https://graph.facebook.com/v18.0
+    url: https://graph.facebook.com
+    version: ${WHATSAPP_API_VERSION:v23.0}
   webhook:
     verify:
-      token: ${WHATSAPP_WEBHOOK_VERIFY_TOKEN:repairo_webhook_token}
+      token: ${WHATSAPP_WEBHOOK_VERIFY_TOKEN}
+  test:
+    mode: ${WHATSAPP_TEST_MODE:true}
 
 # Logging
 logging:
@@ -46,6 +54,15 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/repairshop_dev
+  devtools:
+    restart:
+      enabled: true
+      additional-paths: src/main/resources
+    livereload:
+      enabled: true
+      port: 35729
+  thymeleaf:
+    cache: false
 
 server:
   port: 8080
